HEAD
    + New -abort-on-fail option to stop suite execution when first suite fails
    + Ensure that hosts are defined in the scenario before running a suite
    + Allow to specify shell commands directly in YAML test description
    + Allow to create up to 32 nbd devices
    + Take screenshot at the end of webdriver tests
    + Test report is now properly generated after re-running tests
    + Suite description is now parsed again when re-running a test
    + Allow to define number of tries of a test before it passes
    + Do not warn about running machines with -reuse
    + Adding browser global option for webdriver tests
    + Added restorelast command to anste-snapshot
    + Now cloud-init is configured to preserve the sources list
    + Now variables are also provided to the setup scripts
    + Now _deployCopy returns whether the deployment was okay or not
    + Now if the setup script fails, an exception is thrown
    + Added imageNeedsUpdate and markImageUpdated methods to the virtualizers
    + Added global/identifier config key
    + Make anste-clean command work with any virtualizer
    + Added listVMs method to the virtualizers
    + Added identifier and conf command line arguments
    + Make bridge definition mandatory when using manual-bridging
    + Now the interface, the gateway and the first address from the config
      are passed to the tests and the suites as COMM_iface, COMM_gateway
      and COMM_firstAddress
    + Added master configuration key to set the IP of the master
    + Added finalConfigurations method to ANSTE::Image::Commands
    + Added ANSTE::Virtualizer::OpenStack with partial support
    + Added useOpenStack and setUseOpenStack to Anste::Status
    + Added virtualizerStatus and setVirtualizerStatus to Anste::Status
    + Added auto-snapshot for -break and -step modes
    + Show current test index and total tests
    + Now symlinks are dereferenced when tranfering the files to the slaves